--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    image: ghcr.io/wumenglin/devcontainer:master
+    image: ghcr.io/mlwu-ai/devcontainer:master
     platform: linux/amd64
     container_name: dev
     volumes:
